# xboing-python

./: .gitignore  .pylintrc  CHANGELOG.md  CLAUDE.md  LICENSE  PLAN.md  README.md  SCRIPTS-DESIGN.md  SESSION.md  STATUS.md  TODO.md  organize_project.sh  pyproject.toml  pyrightconfig.json  requirements.txt  xboing.spec
.claude/: settings.local.json
.claude/agents/: code-quality-enforcer.md  design-guardian.md  documentation-guardian.md  product-manager.md
.cursor/rules/: bugfixing.mdc  python.mdc  python_quality_standards.mdc
.github/workflows/: build.yml  pylint.yml  quality.yml  tests.yml
.junie/: guidelines.md
assets/levels/: level01.data
docs/: ARCHITECTURE-MVC-REVISED.md  AUDIO-DESIGN.md  BLOCKS-DESIGN.md  BLOCK_IMPLEMENTATION.md  CODE-DESIGN-FEEDBACK.md  CODE-EXCEPTIONS-DESIGN.md  CODE-GAME-PROTOCOL-REVISED.md  CODE-GAME-PROTOCOL.md  CODE-GUI-DESIGN.md  CODE-MAGIC-NUMBERS.md  CODE-PATHS.md  CODE-SRP-ASSESSMENT.md  CODE-TESTING-STRATEGY.md  COMPLEXITY-METRICS.md  DESIGN-SCORING.md  DI-DESIGN.md  DISTRIBUTION-PYINSTALLER.md  GAME-AUDIO-DESIGN.md  GAME-BALL-LAUNCH.md  GAME-BLOCKS-DESIGN.md  GAME-BONUS-SCORE-DESIGN.md  GAME-CONTROLLER-DECOMPOSITION.md  GAME-CONTROLLER-TESTS.md  GAME-HIGHSCORE-DESIGN.md  GAME-PADDLE-ARC-DESIGN.md  GAME-PADDLE.md  GAME-SHAPES-DESIGN.md  GAME-SHAPES.md  GAME-WELCOME-DESIGN.md  GAMECONTROLLER-FINAL-STATE.md  GUI-DESIGN.md  GUI-SCREEN-FLOWS.md  HATCH_USAGE.md  LEVELS-DESIGN.md  LEVELS.md  LINTER-PLAN.md  LOGGING-DESIGN.md  MVC-REFACTOR.md  ORIGINAL_README.md  PADDLE-FEATURES.md  (+15 more)
docs/xboing2.4/: xboing.md
scripts/: better_xpm_converter.py  build_executable.py  convert_au_to_wav.py  convert_audio.py  convert_paddle_sound.py  convert_xpm_to_png.py  dep_grep.py  fix_background.py  fix_balllost.py  normalize_audio.py  simple_au_convert.py  sync_assets.py  xpm_to_png.py
src/: __init__.py  __version__.py  app_coordinator.py  di_module.py  main.py  xboing.py
src/controllers/: base_controller.py  controller.py  controller_factory.py  controller_manager.py  game_controller.py  game_over_controller.py  instructions_controller.py  level_complete_controller.py  window_controller.py
src/engine/: __init__.py  audio.py  audio_manager.py  events.py  graphics.py  input.py  window.py
src/game/: __init__.py  ball.py  ball_manager.py  block.py  block_manager.py  collision.py  game_setup.py  game_state.py  level_manager.py  paddle.py  sprite_block.py
src/layout/: __init__.py  game_layout.py
src/renderers/: __init__.py  block_renderer.py  bullet_renderer.py  digit_renderer.py  lives_renderer.py
src/ui/: __init__.py  ammo_display.py  bottom_bar_view.py  content_view.py  content_view_manager.py  game_over_view.py  game_view.py  instructions_view.py  level_complete_view.py  level_display.py  lives_display.py  message_display.py  score_display.py  special_display.py  timer_display.py  top_bar_view.py  ui_factory.py  ui_manager.py  view.py
src/utils/: __init__.py  asset_loader.py  asset_paths.py  audio_player.py  background_generator.py  digit_display.py  event_bus.py  layout.py  lives_display.py  logging_config.py  logging_decorators.py  simple_audio.py
src/xboing/: __init__.py  app_coordinator.py  di_module.py  xboing.py
src/xboing/controllers/: __init__.py  controller.py  controller_manager.py  game_controller.py  game_input_controller.py  game_over_controller.py  instructions_controller.py  level_complete_controller.py  paddle_input_controller.py  window_controller.py
src/xboing/engine/: audio_manager.py  events.py  graphics.py  input.py  window.py
src/xboing/game/: ball.py  ball_manager.py  block.py  block_manager.py  bullet.py  bullet_manager.py  circular_game_shape.py  collision.py  collision_handlers.py  components.py  game_setup.py  game_shape.py  game_state.py  game_state_manager.py  level_manager.py  paddle.py  physics_mixin.py  power_up_manager.py  protocols.py
src/xboing/layout/: game_layout.py
src/xboing/renderers/: __init__.py  ammo_renderer.py  block_renderer.py  bullet_renderer.py  bullet_row_renderer.py  composite_renderer.py  digit_renderer.py  lives_renderer.py  logo_renderer.py  row_renderer.py
src/xboing/scripts/: build_executable.py  convert_au_to_wav.py  convert_xpm_to_png.py  dep_grep.py  normalize_audio.py  utils.py
src/xboing/ui/: ammo_display.py  bottom_bar_view.py  colors.py  game_over_view.py  game_view.py  instructions_view.py  level_complete_view.py  level_display.py  lives_display.py  message_display.py  score_display.py  special_display.py  timer_display.py  top_bar_view.py  ui_config.py  ui_manager.py  view.py
src/xboing/utils/: asset_loader.py  asset_paths.py  block_type_loader.py  event_helpers.py  logging_config.py  logging_decorators.py
tests/: test_asset_paths.py  test_audio.py  test_audio_headless.py  test_block_mapping.py  test_block_mapping_pytest.py  test_display.py  test_level_loader.py
tests/game/: test_collision_handlers.py  test_collision_system.py  test_game_controller_collision_integration.py
tests/integration/: test_audio.py  test_display.py  test_game_controller_input_integration.py
tests/unit/: conftest.py  test_ammo_display.py  test_ammo_renderer.py  test_asset_paths.py  test_audio_manager.py  test_audio_player.py  test_ball.py  test_ball_manager.py  test_base_controller.py  test_block_mapping.py  test_bullet.py  test_bullet_manager.py  test_circular_game_shape.py  test_collision.py  test_components.py  test_content_view_manager.py  test_controller_manager.py  test_di_module.py  test_di_module_providers.py  test_event_bus.py  test_game_controller.py  test_game_controller_bullets.py  test_game_input_controller.py  test_game_shape.py  test_game_state.py  test_game_state_manager.py  test_game_view.py  test_instructions_controller.py  test_level_complete_controller.py  test_level_display.py  test_level_loader.py  test_lives_display.py  test_lives_display_component.py  test_message_display.py  test_paddle_input_controller.py  test_power_up_manager.py  test_protocols.py  test_score_display.py  test_timer_display.py  test_ui_manager.py
