[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xboing"
description = "XBoing - A classic breakout-style game modernized with Python and Pygame"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "X Consortium License"}
authors = [
    {name = "Original: Justin C. Kibell"},
    {name = "Python port: XBoing-py Team"}
]
dependencies = [
    "pygame",
    "injector>=0.21.0",
    "typing_extensions",
]
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Arcade",
    "Intended Audience :: End Users/Desktop",
]

[project.urls]
"Homepage" = "https://github.com/jmf-pobox/xboing-python"
"Bug Tracker" = "https://github.com/jmf-pobox/xboing-python/issues"

[project.scripts]
xboing = "xboing.main:game_main"

[tool.hatch.build.targets.wheel]
packages = ["src/xboing"]
include-package-data = true

[tool.hatch.build]
exclude = [
    ".gitignore",
    "tests/",
    "docs/",
]

# Asset inclusion is handled automatically by include-package-data in wheel target

[tool.hatch.version]
path = "src/xboing/__version__.py"

[tool.hatch.envs.default]
dependencies = [
    # Testing
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    # Code quality
    "mypy>=1.18.1",
    "pyright>=1.1.0",
    "ruff>=0.13.0",
    "black",
    "pylint",
    # Complexity metrics
    "radon>=6.0.1",
    "xenon>=0.9.1",
    # Dev tools
    "pillow",
    "aiohttp",  # Required by black language server
]
path = ".venv"

[tool.hatch.envs.default.scripts]
test = "pytest tests/unit"
test-cov = "pytest --cov-report=term-missing --cov=src {args:tests/}"
cov = "pytest --cov-report=term-missing --cov=src {args:tests/}"
game = "python -m xboing"
# Production code quality commands (src/ only)
lint = "ruff check src/"
format = "black src/"
format-check = "black --check src/"
type = "mypy src/"
type-pyright = "pyright"
type-pyright-stats = "pyright --stats"
type-all = ["type", "type-pyright"]
# Test code quality commands (tests/ only)
lint-test = "ruff check tests/"
format-test = "black tests/"
format-check-test = "black --check tests/"
type-test = "mypy tests/"
type-pyright-test = "pyright tests/"
# Combined quality commands (src/ + tests/)
lint-all = "ruff check src/ tests/"
format-all = "black src/ tests/"
format-check-all = "black --check src/ tests/"
type-all-code = "mypy src/ tests/"
type-pyright-all = "pyright src/ tests/"
# Combined quality check (production code only - must pass)
check = ["lint", "format-check", "type", "type-pyright", "test"]
# CI quality check (matches exact CI workflow checks)
ci-check = ["lint", "format-check", "type", "type-pyright", "test"]
check-cov = ["lint", "format-check", "type", "type-pyright", "test-cov"]
# Check everything including test code (for tracking progress)
check-all = ["lint-all", "type-all-code", "type-pyright-all", "test"]
# Combined fixing command
fmt = ["black src/ tests/", "ruff check --fix src/ tests/"]
lint-fix = ["black src/ tests/", "ruff check --fix src/ tests/"]
fix = ["format-all", "lint-fix"]
count-lines = "python -c \"import pathlib; print(sum(1 for f in pathlib.Path('src').rglob('*.py') for _ in open(f)))\""
pylint = "python -m pylint --rcfile=.pylintrc src"
# Complexity metrics
complexity = "radon cc src/ -s -a"
complexity-detailed = "radon cc src/ -s"
complexity-json = "radon cc src/ -j"
maintainability = "radon mi src/ -s"
raw-metrics = "radon raw src/ -s"
complexity-check = "xenon --max-absolute C --max-modules C --max-average B --exclude '**/scripts/*' src/"
complexity-monitor = ["complexity", "maintainability"]
# Run the game with coverage and then show the report
cov-game = ["coverage run --source=src -m xboing", "coverage report -m"]
cov-game-html = ["coverage run --source=src -m xboing", "coverage html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
timeout = 5
timeout_method = "thread"

# Black configuration
[tool.black]
# Aligned with pylint and ruff: 88 chars, Python 3.8
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# Ruff configuration
[tool.ruff]
# Aligned with pylint and black: 88 chars, Python 3.8
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "RUF", # Ruff-specific rules
    "PL",  # pylint
    "D",   # pydocstyle
    "A",   # flake8-builtins
    "C90", # mccabe complexity
]
extend-select = ["PLC0415"]

ignore = [
    "E203", "E501", "D203", "D213",
    "D100", "D101", "D102", "D103", "D107", "D205", "D212",
    "PLR2004", "C408",
    "PLR0913", "PLR0912", "PLR0915", "C901", "PLR0911", "D417",
    "TC001",  # Move import into TYPE_CHECKING - too aggressive for runtime imports
    "TC003",  # Move standard lib import into TYPE_CHECKING - unnecessary overhead
]
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.ruff.lint.isort]
known-first-party = ["src"]
combine-as-imports = true
force-sort-within-sections = true

# MyPy configuration
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.hatch.envs.publish]
dependencies = [
    "build",
    "twine",
]

[tool.hatch.envs.publish.scripts]
build = "python -m build"
upload = "twine upload dist/*"
check = "twine check dist/*"
test-publish = [
    "python -m build",
    "twine check dist/*",
    "twine upload --repository testpypi dist/*"
]

[tool.hatch.fmt]
targets = ["src", "tests"]
formatter = "black"
linter = "isort"

# Radon complexity thresholds
# Cyclomatic Complexity grades: A=1-5, B=6-10, C=11-20, D=21-50, E=51-100, F=100+
# Maintainability Index grades: A=20-100, B=10-19, C=0-9
[tool.radon]
exclude = "tests/*,*/__init__.py,*/scripts/*"
# Set thresholds for failing
cc_min = "B"  # Fail if any function has CC > 10
mi_min = "B"  # Fail if any module has MI < 10
